[project]
name = "working"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml==3.45.0",
    "matplotlib==3.7.5",
    "opencv-python==4.10.0.84",
    "optuna>=4.6.0",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
    "wandb==0.16.6",
]