[project]
name = "bdz-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "comet-ml==3.54.2",
    "matplotlib==3.10.0",
    "opencv-python==4.12.0.88",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "wandb==0.23.0",
]
